# lhp

./: .gitignore  .gitmodules  10_preprocess_noise.sh  11_estimate_noise.sh  11_remove_impulse_noise.sh  20_stabilize_video.sh  30_compute_optical_flow.sh  31_downsample_sequence.sh  32_compute_tvl1_flow.sh  33_upsample_oflow.sh  34_compute_occlusion_masks.sh  40_run_denoising.sh  41_estimate_noise.sh  41_run_downsa_nlbayes_denoising.sh  41_run_downsa_nldct_denoising.sh  41_run_nlbayes_denoising.sh  41_run_nldct_16x3_denoising.sh  41_run_nldct_denoising.sh  41_run_nlkalmanbwd_denoising.sh  41_run_rbilf_denoising.sh  41_run_rnlmeans_denoising.sh  50_run_deblurring.sh  51_run_fba_on_denoised.sh  51_run_fba_on_stabilized.sh  README  input_data  preprocess.mk  run_all.sh
input_data/: README
input_data/city/: 001.tif  002.tif  003.tif  004.tif  005.tif  006.tif  007.tif  008.tif  009.tif  010.tif  011.tif  012.tif  013.tif  014.tif  015.tif  016.tif  017.tif  018.tif  019.tif  020.tif
src/1_preprocessing/ponomarenko/: algo.cpp
src/2_stabilization/estadeo_1.1/src/: main.cpp  utils.cpp  utils.h
src/4_denoising/nlbayes/: CMakeLists.txt
src/4_denoising/nlbayes/scripts/: oflow2srch_paul-bsic-noise_params.py  oflow2srch_varithres_params.py
src/4_denoising/nlbayes/src/: main_vnlb.cpp
src/4_denoising/nlbayes/src/NlBayes/: CMakeLists.txt  VideoNLBayes.cpp  VideoNLBayes.h
src/4_denoising/nlbayes/src/Utilities/: LibImages.cpp  LibVideoT.cpp  LibVideoT.hpp  Utilities.cpp  Utilities.h
src/4_denoising/nldct/: CMakeLists.txt
src/4_denoising/nldct/src/: main_vnlb.cpp
src/4_denoising/nldct/src/core/: nldct.cpp  nldct.h
src/4_denoising/nldct/src/utils/: lib_videot.hpp
src/4_denoising/rbilf/: .gitignore  CMakeLists.txt  Makefile  README  README.md
src/4_denoising/rbilf/lib/argparse/: CMakeLists.txt  argparse.c
src/4_denoising/rbilf/lib/tvl1flow/: CMakeLists.txt
src/4_denoising/rbilf/scripts/: CMakeLists.txt  rbilf-gt.sh  rbilf-mp4.sh  rbilf_train.sh  train-novari.sh  train.sh  view_results.m  vnlm-gt.sh  vnlm-mp4.sh  vnlm_gt.sh  vnlm_train-novari.sh  vnlm_train.sh
src/4_denoising/rbilf/src/: CMakeLists.txt  main.c
src/5_deblurring/fba/: main.c
src/utils/convicon/: Makefile
src/utils/imscript/: .deps.mk
